# tracer-nvbit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
src/: pytracer.cpp
test/: run.sh  test.py  test_layer_wise.py
tracer_tool/: Makefile  tracer_tool.cu  tracer_tool.h
